--- a/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin-navbar/admin-navbar.component.html
@@ -1,6 +1,4 @@
-<nav
-  class="navbar navbar-expand-lg admin-navbar"
->
+<nav class="navbar navbar-expand-lg admin-navbar">
   <div class="container">
     <a class="navbar-brand" routerLink="/admin/">Админка</a>
     <button
