--- a/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.scss
+++ b/src/app/modules/admin/components/companies/company-admin-page/company-admin-page.component.scss
@@ -28,7 +28,8 @@
   padding: 1.5rem;
   margin-bottom: 1.5rem;
 
-  h3, h4 {
+  h3,
+  h4 {
     font-family: var(--warm-font-heading);
     color: var(--warm-text-heading);
     margin-bottom: 1rem;
@@ -87,4 +88,3 @@
     line-height: 1.6;
   }
 }
-
