--- a/src/app/modules/home/components/unsubscribe-me/unsubscribe-me.component.scss
+++ b/src/app/modules/home/components/unsubscribe-me/unsubscribe-me.component.scss
@@ -8,7 +8,7 @@
 }
 
 .subtitle {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-size: 1.5rem;
   font-weight: 400;
   color: var(--warm-text-secondary);
