--- a/src/app/modules/salaries/components/currencies-chart-page/currencies-chart-page.component.scss
+++ b/src/app/modules/salaries/components/currencies-chart-page/currencies-chart-page.component.scss
@@ -32,7 +32,7 @@ canvas {
 }
 
 .currency-title {
-  font-family: 'Lora', Georgia, serif;
+  font-family: "Lora", Georgia, serif;
   font-weight: 600;
   color: var(--warm-text-heading);
 }
