--- a/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.scss
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.scss
@@ -33,7 +33,7 @@
 }
 
 .historical-title {
-  font-family: 'Lora', Georgia, serif;
+  font-family: "Lora", Georgia, serif;
   font-weight: 600;
   color: var(--warm-text-heading);
   margin-bottom: 1rem;
